/*
 * Copyright 2018 The Feast Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "feast/specs/EntitySpec.proto";
import "feast/specs/StorageSpec.proto";
import "feast/types/Granularity.proto";
import "feast/types/Value.proto";

package feast.specs;

option java_package = "feast.specs";
option java_outer_classname = "FeatureSpecProto";
option go_package = "feast/go-feast-proto/feast/specs";

message FeatureSpec {
  string id = 1;
  string name = 2;
  string owner = 3;
  string description = 4;
  string uri = 5;
  feast.types.Granularity.Enum granularity = 6;
  feast.types.ValueType.Enum valueType = 7;
  string entity = 8;
  string group = 9;
  repeated string tags = 10;
  map<string,string> options = 11;
  DataStores dataStores = 12;
}

message DataStores {
  DataStore serving = 1;
  DataStore warehouse = 2;
}

message DataStore {
  string id = 1;
  map<string,string> options = 2;
}
